# Fundamentals

./: CLAUDE.md  Cargo.toml  company_tickers_cache.json  config.toml  prompt-vcp.md  prompt.md  send_prompt.py
config/: Cargo.toml
config/src/: lib.rs
edgar/: Cargo.toml
edgar/src/: client.rs  compute.rs  fetch.rs  lib.rs  parse.rs  types.rs
model/: Cargo.toml
model/src/: edgar.rs  financials.rs  lib.rs  sentiment.rs  statements.rs
runner/: Cargo.toml
runner/src/: fundamentals_fetcher.rs  lib.rs  main.rs
scraper/: Cargo.toml
scraper/src/: financial_scraper.rs  lib.rs  screener_scraper.rs  sentiment_scraper.rs
scraper/src/financial_scraper/: mod.rs  parse.rs  table.rs  utils.rs
