[workspace]
resolver = "2"
members = ["runner", "config", "scraper", "model", "edgar"]

[workspace.package]
edition = "2024"

[workspace.dependencies]
anyhow = "1"

toml = "1"
serde = { version = "1", features = ["derive"] }

tracing = "0.1"

tokio = {version = "1.5", features = ["full"]}
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.13", features = ["json"] }
serde_json = "1"


[profile.release]
lto = true
strip = true
codegen-units = 1
panic = "abort"
