[package]
name = "edgar"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

model = { path = "../model" }
roxmltree = "0.21"
htmd = "0.5"

reqwest = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

