[package]
name = "runner"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow = { workspace = true }

serde_json = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
time = { version = "0.3", features = ["local-offset", "macros"] }

tokio = { workspace = true }
chrome_driver = { workspace = true }


config = { path = "../config" }
scraper = { path = "../scraper" }
model = { path = "../model" }
edgar = { path = "../edgar" }