[package]
name = "scraper"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow = { workspace = true }

chrome_driver = { path = "../../ChromeDriver" }
chrono = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

config = { path = "../config" }
model = { path = "../model" }
serde_json = { workspace = true }

