[package]
name = "scraper"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow = { workspace = true }


chrono = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
chrome_driver = { workspace = true }
serde_json = { workspace = true }

config = { path = "../config" }
model = { path = "../model" }

